--- a/www/project.html
+++ b/www/project.html
@@ -94,7 +94,7 @@
             </p>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2">
-          <button type="button" name="button" class="btn btn-default btn-md pull-right"><span class="new-h3"><a href="#"><i class="fa fa-pencil"></i> Edit project</a><span></button>
+          <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button> Edit</a></button>
         </div>
       </div>
 
@@ -145,7 +145,7 @@
                     <h6 class="card-subtitle text-muted">(Due Date)</h6>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <span class="glyphicon glyphicon-edit"></span>
+                    <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
@@ -171,7 +171,7 @@
                     <h6 class="card-subtitle text-muted">(Due Date)</h6>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <span class="glyphicon glyphicon-edit"></span>
+                    <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
@@ -197,7 +197,7 @@
                     <h6 class="card-subtitle text-muted">(Due Date)</h6>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <span class="glyphicon glyphicon-edit"></span>
+                    <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
@@ -223,7 +223,7 @@
                     <h6 class="card-subtitle text-muted">(Due Date)</h6>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <span class="glyphicon glyphicon-edit"></span>
+                    <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
@@ -249,7 +249,7 @@
                     <h6 class="card-subtitle text-muted">(Due Date)</h6>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <span class="glyphicon glyphicon-edit"></span>
+                    <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
@@ -304,7 +304,7 @@
                     <h6 class="card-subtitle text-muted">(Due Date)</h6>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <span class="glyphicon glyphicon-edit"></span>
+                    <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
@@ -330,7 +330,7 @@
                     <h6 class="card-subtitle text-muted">(Due Date)</h6>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <span class="glyphicon glyphicon-edit"></span>
+                    <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
@@ -356,7 +356,7 @@
                     <h6 class="card-subtitle text-muted">(Due Date)</h6>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <span class="glyphicon glyphicon-edit"></span>
+                    <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
@@ -382,7 +382,7 @@
                     <h6 class="card-subtitle text-muted">(Due Date)</h6>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <span class="glyphicon glyphicon-edit"></span>
+                    <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
@@ -408,7 +408,7 @@
                     <h6 class="card-subtitle text-muted">(Due Date)</h6>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <span class="glyphicon glyphicon-edit"></span>
+                    <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
