Members & Project att

--- a/www/project.html
+++ b/www/project.html
@@ -94,7 +94,7 @@
             </p>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2">
-          <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button> Edit</a></button>
+          <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
         </div>
       </div>
 
