--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,7 @@
     <script src="js/app.js" charset="utf-8"></script>
 
   </head>
-  <body ng-app="fellowship" ng-controller="AppController" ng-init="redirectIfNotLoggedIn()">
+  <body ng-app="fellowship" ng-controller="AppController">
 
     <div class="container">
       <div class="row">
