Project Start & Due dates

--- a/www/editproject.html
+++ b/www/editproject.html
@@ -118,6 +118,30 @@
               </div>
             </div>
 
+            <div class="row">
+              <div class="form-group form-group-lg">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+                  <label for="proj-start" class="control-label">Start Date</label>
+                </div>
+
+                <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
+                  <input type="date" class="form-control" id="proj-start" placeholder="Project Title">
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="form-group form-group-lg">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+                  <label for="proj-due" class="control-label">Due Date</label>
+                </div>
+
+                <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
+                  <input type="date" class="form-control" id="proj-due" placeholder="Project Title">
+                </div>
+              </div>
+            </div>
+
             <div class="form-group">
               <button type="submit" class="btn btn-default btn-lg">Cancel</button>
               <button type="submit" class="btn btn-default btn-lg">Save</button>
