--- a/www/project.html
+++ b/www/project.html
@@ -92,6 +92,8 @@
             <p class="text-justify">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat risus felis, sed pellentesque tellus dapibus eu. Nulla sed dolor posuere, aliquam turpis id, tincidunt orci. Phasellus metus nunc, porta ut faucibus sit amet, maximus in est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris et elit sed nisi sollicitudin eleifend nec ut purus. Sed molestie augue sed mollis imperdiet. Curabitur sit amet ipsum in velit consequat blandit. Ut sollicitudin sem porta libero aliquam, et volutpat est scelerisque. Nulla imperdiet hendrerit risus, id porta purus gravida et. Nunc mi ante, ultricies sit amet varius a, euismod nec erat. Fusce nunc erat, vulputate ut ultricies ut, mollis ac tellus.
             </p>
+            <h4><span class="glyphicon glyphicon-calendar"></span> Start Date: mm/dd/yyyy</h4>
+            <h4><span class="glyphicon glyphicon-calendar"></span> Due Date: mm/dd/yyyy</h4>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2">
           <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
