--- a/www/project.html
+++ b/www/project.html
@@ -135,7 +135,7 @@
               <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12">
                 <div class="card-content row">
                   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <h4 class="card-title"><span class="glyphicon glyphicon-plus"></span> Add New Quest</h4>
+                    <button type="button" name="button" class="btn btn-default btn-lg pull-right"><a href="#"><span class="glyphicon glyphicon-plus"></span> Add New Quest</a></button>
                   </div>
                 </div>
               </div>
@@ -294,7 +294,7 @@
               <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12">
                 <div class="card-content row">
                   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <h4 class="card-title"><span class="glyphicon glyphicon-plus"></span> Add New Quest</h4>
+                    <button type="button" name="button" class="btn btn-default btn-lg pull-right"><a href="#"><span class="glyphicon glyphicon-plus"></span> Add New Quest</a></button>
                   </div>
                 </div>
               </div>
@@ -453,7 +453,7 @@
               <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12">
                 <div class="card-content row">
                   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <h4 class="card-title"><span class="glyphicon glyphicon-plus"></span> Add New Member</h4>
+                    <button type="button" name="button" class="btn btn-default btn-lg pull-right"><a href="#"><span class="glyphicon glyphicon-plus"></span> Add New Member</a></button>
                   </div>
                 </div>
               </div>
