--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/landing.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/index.css" media="screen" title="no title" charset="utf-8">
 
     <!--  ANGULAR -->
     <script src="js/angular.min.js" charset="utf-8"></script>
