--- a/www/editquest.html
+++ b/www/editquest.html
@@ -111,7 +111,7 @@
                     <input type="text" class="form-control" id="skill-title" placeholder="Skill Title">
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                    <input type="text" class="form-control" id="skill-exp" placeholder="20">
+                    <input type="text" class="form-control" id="skill-exp" placeholder="XP">
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <button class="btn btn-default"><span class="glyphicon glyphicon-plus"></span> Add New Skill</button>
@@ -139,7 +139,7 @@
 
             <div>
               <h3>DANGER ZONE</h3>
-              <button type="submit" class="btn btn-default btn-lg">Delete Quest</button>
+              <button type="submit" class="btn btn-danger btn-lg">Delete Quest</button>
             </div>
           </form>
         </div>
