--- a/www/editmission.html
+++ b/www/editmission.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/master.css">
 
     <!--  ANGULAR -->
     <script src="js/angular.min.js" charset="utf-8"></script>
@@ -73,7 +74,7 @@
 
         <div class="collapse navbar-collapse" id="collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#"><i class="fa fa-home"></i> Home</a></li>
+            <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
             <li><a href="#"><i class="fa fa-users"></i> Members</a></li>
             <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
           </ul>
@@ -113,7 +114,7 @@
 
             <div>
               <h3>DANGER ZONE</h3>
-              <button type="submit" class="btn btn-default btn-lg">Delete Mission</button>
+              <button type="submit" class="btn btn-danger btn-lg">Delete Mission</button>
             </div>
           </form>
         </div>
