--- a/www/editproject.html
+++ b/www/editproject.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/master.css">
 
     <!--  ANGULAR -->
     <script src="js/angular.min.js" charset="utf-8"></script>
@@ -142,6 +143,38 @@
               </div>
             </div>
 
+            <div class="row">
+
+              <div class="form-group form-group-lg">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+                  <label for="proj-due" class="control-label">Prerequisites</label>
+                </div>
+
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                  <input type="text" class="form-control" id="skill-title" placeholder="Skill Title">
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                  <input type="text" class="form-control" id="skill-exp" placeholder="XP">
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                  <button class="btn btn-default"><span class="glyphicon glyphicon-plus"></span> Add New Prerequisite</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <ul class="list-unstyled">
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Prerequisite</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Prerequisite</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Prerequisite</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Prerequisite</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Prerequisite</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Prerequisite</button></li>
+                </ul>
+              </div>
+            </div>
+
             <div class="form-group">
               <button type="submit" class="btn btn-default btn-lg">Cancel</button>
               <button type="submit" class="btn btn-default btn-lg">Save</button>
@@ -151,7 +184,7 @@
 
             <div>
               <h3>DANGER ZONE</h3>
-              <button type="submit" class="btn btn-default btn-lg">Delete Project</button>
+              <button type="submit" class="btn btn-danger btn-lg">Delete Project</button>
             </div>
           </form>
         </div>
