--- a/www/members.html
+++ b/www/members.html
@@ -49,7 +49,7 @@
 
 
     <!-- BASE MODULE -->
-    <script src="js/modules/modules.js" charset="utf-10"></script>
+    <!-- <script src="js/modules/modules.js" charset="utf-10"></script> -->
 
   <!-- CONTROLLERS -->
     <script src="js/controllers/controllers.js" charset="utf-10"></script>
