--- a/www/signup.html
+++ b/www/signup.html
@@ -48,7 +48,7 @@
 
 
     <!-- BASE MODULE -->
-    <script src="js/modules/modules.js" charset="utf-8"></script>
+    <!-- <script src="js/modules/modules.js" charset="utf-8"></script> -->
 
   <!-- CONTROLLERS -->
     <script src="js/controllers/controllers.js" charset="utf-8"></script>
