--- a/www/editprofile.html
+++ b/www/editprofile.html
@@ -74,9 +74,9 @@
 
         <div class="collapse navbar-collapse" id="collapse-1">
           <ul class="nav navbar-nav">
-            <li class><a href="#"><i class="fa fa-home"></i> Home</a></li>
+            <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
             <li><a href="#"><i class="fa fa-users"></i> Members</a></li>
-            <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
+            <li class="active"><a href="#"><i class="fa fa-user"></i> Profile</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#"><i class="fa fa-sign-out"></i> Log Out</a></li>
