--- a/www/editproject.html
+++ b/www/editproject.html
@@ -74,7 +74,7 @@
 
         <div class="collapse navbar-collapse" id="collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#"><i class="fa fa-home"></i> Home</a></li>
+            <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
             <li><a href="#"><i class="fa fa-users"></i> Members</a></li>
             <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
           </ul>
