--- a/www/editquest.html
+++ b/www/editquest.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/master.css">
 
     <!--  ANGULAR -->
     <script src="js/angular.min.js" charset="utf-8"></script>
@@ -48,7 +49,7 @@
 
 
     <!-- BASE MODULE -->
-    <!-- <script src="js/modules/modules.js" charset="utf-8"></script> -->
+    <script src="js/modules/modules.js" charset="utf-8"></script>
 
   <!-- CONTROLLERS -->
     <script src="js/controllers/controllers.js" charset="utf-8"></script>
@@ -73,7 +74,7 @@
 
         <div class="collapse navbar-collapse" id="collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#"><i class="fa fa-home"></i> Home</a></li>
+            <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
             <li><a href="#"><i class="fa fa-users"></i> Members</a></li>
             <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
           </ul>
