Added master css to members

--- a/www/home.html
+++ b/www/home.html
@@ -49,7 +49,7 @@
 
 
     <!-- BASE MODULE -->
-    <!-- <script src="js/modules/modules.js" charset="utf-8"></script> -->
+    <script src="js/modules/modules.js" charset="utf-8"></script>
 
   <!-- CONTROLLERS -->
     <script src="js/controllers/controllers.js" charset="utf-8"></script>
