--- a/www/members.html
+++ b/www/members.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/project.css" media="screen" title="no title" charset="utf-10">
+    <link rel="stylesheet" href="css/master.css">
 
     <!--  ANGULAR -->
     <script src="js/angular.min.js" charset="utf-10"></script>
@@ -49,7 +50,7 @@
 
 
     <!-- BASE MODULE -->
-    <!-- <script src="js/modules/modules.js" charset="utf-10"></script> -->
+    <script src="js/modules/modules.js" charset="utf-10"></script>
 
   <!-- CONTROLLERS -->
     <script src="js/controllers/controllers.js" charset="utf-10"></script>
@@ -74,8 +75,8 @@
 
         <div class="collapse navbar-collapse" id="collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#"><i class="fa fa-home"></i> Home</a></li>
-            <li><a href="#"><i class="fa fa-users"></i> Members</a></li>
+            <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+            <li class="active"><a href="#"><i class="fa fa-users"></i> Members</a></li>
             <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
