--- a/www/project.html
+++ b/www/project.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/project.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/master.css">
 
     <!--  ANGULAR -->
     <script src="js/angular.min.js" charset="utf-8"></script>
