--- a/www/project.html
+++ b/www/project.html
@@ -50,7 +50,7 @@
 
 
     <!-- BASE MODULE -->
-    <!-- <script src="js/modules/modules.js" charset="utf-8"></script> -->
+    <script src="js/modules/modules.js" charset="utf-8"></script>
 
   <!-- CONTROLLERS -->
     <script src="js/controllers/controllers.js" charset="utf-8"></script>
@@ -75,7 +75,7 @@
 
         <div class="collapse navbar-collapse" id="collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#"><i class="fa fa-home"></i> Home</a></li>
+            <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
             <li><a href="#"><i class="fa fa-users"></i> Members</a></li>
             <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
           </ul>
