logoff button working - going to fiz login redirect

--- a/www/home.html
+++ b/www/home.html
@@ -79,7 +79,7 @@
             <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><i class="fa fa-sign-out"></i> Log Out</a></li>
+            <li><a ng-click="logout()" href="#"><i class="fa fa-sign-out"></i> Log Out</a></li>
           </ul>
         </div>
       </div>
