Project - Show Quest details

--- a/www/project.html
+++ b/www/project.html
@@ -149,7 +149,7 @@
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
-                    <button class="btn btn-default btn-md pull-right" data-toggle="collapse" href="#collapseQuest1" aria-expanded="true" aria-controls="collapseQuest1"><span class="glyphicon glyphicon-resize-full"></span></button>
+                    <button class="btn btn-default btn-md pull-right" data-toggle="collapse" href="#collapseQuest1" aria-expanded="true" aria-controls="collapseQuest1"><a href="#"><a href="#"><span class="glyphicon glyphicon-resize-full"></span> Show Details</a></a></button>
                   </div>
                   <div class="collapse" id="collapseQuest1">
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
@@ -178,7 +178,7 @@
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
-                    <button class="btn btn-default btn-md pull-right" data-toggle="collapse" href="#collapseQuest2" aria-expanded="true" aria-controls="collapseQuest2"><span class="glyphicon glyphicon-resize-full"></span></button>
+                    <button class="btn btn-default btn-md pull-right" data-toggle="collapse" href="#collapseQuest2" aria-expanded="true" aria-controls="collapseQuest2"><a href="#"><span class="glyphicon glyphicon-resize-full"></span> Show Details</a></button>
                   </div>
                   <div class="collapse" id="collapseQuest2">
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
@@ -207,7 +207,7 @@
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
-                    <button class="btn btn-default btn-md pull-right" data-toggle="collapse" href="#collapseQuest3" aria-expanded="true" aria-controls="collapseQuest3"><span class="glyphicon glyphicon-resize-full"></span></button>
+                    <button class="btn btn-default btn-md pull-right" data-toggle="collapse" href="#collapseQuest3" aria-expanded="true" aria-controls="collapseQuest3"><a href="#"><span class="glyphicon glyphicon-resize-full"></span> Show Details</a></button>
                   </div>
                   <div class="collapse" id="collapseQuest3">
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
@@ -236,7 +236,7 @@
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
-                    <button class="btn btn-default btn-md pull-right" data-toggle="collapse" href="#collapseQuest4" aria-expanded="true" aria-controls="collapseQuest4"><span class="glyphicon glyphicon-resize-full"></span></button>
+                    <button class="btn btn-default btn-md pull-right" data-toggle="collapse" href="#collapseQuest4" aria-expanded="true" aria-controls="collapseQuest4"><a href="#"><span class="glyphicon glyphicon-resize-full"></span> Show Details</a></button>
                   </div>
                   <div class="collapse" id="collapseQuest4">
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
@@ -265,7 +265,7 @@
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <button type="button" name="button" class="btn btn-default btn-md pull-right"><a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a></button>
-                    <button class="btn btn-default btn-md pull-right" data-toggle="collapse" href="#collapseQuest5" aria-expanded="true" aria-controls="collapseQuest5"><span class="glyphicon glyphicon-resize-full"></span></button>
+                    <button class="btn btn-default btn-md pull-right" data-toggle="collapse" href="#collapseQuest5" aria-expanded="true" aria-controls="collapseQuest5"><a href="#"><span class="glyphicon glyphicon-resize-full"></span> Show Details</a></button>
                   </div>
                   <div class="collapse" id="collapseQuest5">
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
