--- a/www/project.html
+++ b/www/project.html
@@ -337,7 +337,7 @@
                   </div>
                   <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                      <button type="button" name="button" class="btn btn-default btn-lg pull-right col-lg-12 col-md-12 col-sm-12 col-xs-12"><a href="#"><span class="glyphicon glyphicon-plus"></span> Choose Member</a></button>
+                      <button type="button" name="button" class="btn btn-default btn-lg pull-right col-lg-12 col-md-12 col-sm-12 col-xs-12" data-toggle="modal" data-target="#chooseMemberModal"><a href="#"><span class="glyphicon glyphicon-plus"></span> Choose Member</a></button>
                     </div>
                 </div>
                 </div>
@@ -364,7 +364,7 @@
                   </div>
                   <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                      <button type="button" name="button" class="btn btn-default btn-lg pull-right col-lg-12 col-md-12 col-sm-12 col-xs-12"><a href="#"><span class="glyphicon glyphicon-plus"></span> Choose Member</a></button>
+                      <button type="button" name="button" class="btn btn-default btn-lg pull-right col-lg-12 col-md-12 col-sm-12 col-xs-12" data-toggle="modal" data-target="#chooseMemberModal"><a href="#"><span class="glyphicon glyphicon-plus"></span> Choose Member</a></button>
                     </div>
                 </div>
                 </div>
@@ -391,7 +391,7 @@
                   </div>
                   <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                      <button type="button" name="button" class="btn btn-default btn-lg pull-right col-lg-12 col-md-12 col-sm-12 col-xs-12"><a href="#"><span class="glyphicon glyphicon-plus"></span> Choose Member</a></button>
+                      <button type="button" name="button" class="btn btn-default btn-lg pull-right col-lg-12 col-md-12 col-sm-12 col-xs-12" data-toggle="modal" data-target="#chooseMemberModal"><a href="#"><span class="glyphicon glyphicon-plus"></span> Choose Member</a></button>
                     </div>
                 </div>
                 </div>
@@ -418,7 +418,7 @@
                   </div>
                   <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                      <button type="button" name="button" class="btn btn-default btn-lg pull-right col-lg-12 col-md-12 col-sm-12 col-xs-12"><a href="#"><span class="glyphicon glyphicon-plus"></span> Choose Member</a></button>
+                      <button type="button" name="button" class="btn btn-default btn-lg pull-right col-lg-12 col-md-12 col-sm-12 col-xs-12" data-toggle="modal" data-target="#chooseMemberModal"><a href="#"><span class="glyphicon glyphicon-plus"></span> Choose Member</a></button>
                     </div>
                 </div>
                 </div>
@@ -429,6 +429,126 @@
         </div>
       </div>
 
+    </div>
+
+    <!-- Modal - Choose member -->
+    <!-- Modal -->
+    <div id="chooseMemberModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Choose Member</h4>
+          </div>
+          <div class="modal-body">
+            <div class="list-group">
+              <a href="#" class="list-group-item active">
+                APPLICANTS
+              </a>
+              <a href="#" class="list-group-item">
+                <div class="row">
+                  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
+                    <!-- Image -->
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 user-image"></div>
+                  </div>
+                  <div class="col-lg-10 col-md-10 col-sm-10 col-xs-8">
+                    <h4 class="card-title">(No Name)</h4>
+                    <h6 class="card-subtitle text-muted">Occupation</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                  </div>
+                </div>
+              </a>
+              <a href="#" class="list-group-item">
+                <div class="row">
+                  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
+                    <!-- Image -->
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 user-image"></div>
+                  </div>
+                  <div class="col-lg-10 col-md-10 col-sm-10 col-xs-8">
+                    <h4 class="card-title">(No Name)</h4>
+                    <h6 class="card-subtitle text-muted">Occupation</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                  </div>
+                </div>
+              </a>
+              <a href="#" class="list-group-item">
+                <div class="row">
+                  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
+                    <!-- Image -->
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 user-image"></div>
+                  </div>
+                  <div class="col-lg-10 col-md-10 col-sm-10 col-xs-8">
+                    <h4 class="card-title">(No Name)</h4>
+                    <h6 class="card-subtitle text-muted">Occupation</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                  </div>
+                </div>
+              </a>
+              <a href="#" class="list-group-item">
+                <div class="row">
+                  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
+                    <!-- Image -->
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 user-image"></div>
+                  </div>
+                  <div class="col-lg-10 col-md-10 col-sm-10 col-xs-8">
+                    <h4 class="card-title">(No Name)</h4>
+                    <h6 class="card-subtitle text-muted">Occupation</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                  </div>
+                </div>
+              </a>
+              <a href="#" class="list-group-item active">
+                SUGGESTED
+              </a>
+              <a href="#" class="list-group-item">
+                <div class="row">
+                  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
+                    <!-- Image -->
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 user-image"></div>
+                  </div>
+                  <div class="col-lg-10 col-md-10 col-sm-10 col-xs-8">
+                    <h4 class="card-title">(No Name)</h4>
+                    <h6 class="card-subtitle text-muted">Occupation</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                  </div>
+                </div>
+              </a>
+              <a href="#" class="list-group-item">
+                <div class="row">
+                  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
+                    <!-- Image -->
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 user-image"></div>
+                  </div>
+                  <div class="col-lg-10 col-md-10 col-sm-10 col-xs-8">
+                    <h4 class="card-title">(No Name)</h4>
+                    <h6 class="card-subtitle text-muted">Occupation</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                    <h6 class="card-subtitle text-muted">LVL - SKILL</h6>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Save</button>
+          </div>
+        </div>
+
+      </div>
     </div>
 
     <script src="js/jquery-2.2.0.min.js"></script>
